<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">test</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="gohome">Go to Home page</string>
    <string name="error_tips">Loading failed. Please try again.</string>
    <string name="empty_tips">No related resource.</string>
    <string name="exit">Exit</string>
    <string name="exit_tips">Press the back-key twice to exit zApp.</string>
    <string name="logout_tips">Do you really want to logout zApp?</string>
    <string name="update_notification_title"><xliff:g id="num">%1$s</xliff:g> App(s) got New Version!</string>
    <string name="share_tips">I found a great app \'<xliff:g id="appName">%1$s</xliff:g>\' on zApp. Get it from http://www.zapp365.com to download.</string>
    <string name="feedback_title">Your suggestions (within 500 characters)</string>
    <string name="feedback_content_hint">Please tell zApp the specifics of your problem or your suggestion.</string>
    <string name="feddback_email_hint">Please enter your email address.</string>
    <string name="app_version">Version:</string>
    <string name="app_size">Size:</string>
    <string name="app_new_size">New size:</string>
    <string name="update_all">Update All</string>
    <string name="delete_all">Delete All</string>
    <string name="page_app_detail">App Details</string>
    <string name="page_download_management">Download Management</string>
    <string name="page_app_management">App Management</string>
    <string name="page_my_apps">My Apps</string>
    <string name="page_content_downloading">Download Management</string>
    <string name="page_account_login">Login</string>
    <string name="page_account_register">Register</string>
    <string name="page_account_home">Account</string>
    <string name="page_account_modify_pwd">Reset Password</string>
    <string name="page_account_registered_successfully">Registered Successfully</string>
    <string name="page_account_forget_password">Forgot Password</string>
    <string name="page_account_recharge_details">Recharge Details</string>
    <string name="page_account_recharge">Recharge</string>
    <string name="page_apk_management">Apk Management</string>
    <string name="page_my_contents">My Contents</string>
    <string name="page_settings">Settings</string>
    <string name="page_favorite_apps">Favorite Apps</string>
    <string name="page_feedback">FAQs</string>
    <string name="page_about">About</string>
    <string name="page_help">Help</string>
    <string name="page_qr_scan">QR Code Scanner</string>
    <string name="page_qr_scan_result">Scan Result</string>
    <string name="page_share_title">Wi-Fi Share</string>
    <string name="page_share_invite_to_install">Invitation</string>
    <string name="page_share_receive_history">History</string>
    <string name="page_my_questions">My Questions</string>
    <string name="page_wallpaper_ablum">Wallpaper Album</string>
    <string name="page_camera">Camera</string>
    <string name="page_applocker">App Lock</string>
    <string name="page_applocker_unlock">Unlock</string>
    <string name="page_applocker_advance_settings">Advance Settings</string>
    <string name="page_applocker_wish_to_lock">Wish to Lock</string>
    <string name="page_applocker_find_password">Forgot password?</string>
    <string name="page_skin">Skin</string>
    <string name="home">Home</string>
    <string name="apps">Apps</string>
    <string name="games">Games</string>
    <string name="ringtone">Ringtones</string>
    <string name="wallpaper">Wallpapers</string>
    <string name="home_recommend">RECOMMEND</string>
    <string name="home_collection">COLLECTIONS</string>
    <string name="home_must_have">MUST HAVE</string>
    <string name="home_new">NEW</string>
    <string name="home_top">TOP</string>
    <string name="home_popular">POPULAR</string>
    <string name="app_categories">CATEGORIES</string>
    <string name="app_hot">HOT</string>
    <string name="app_top">TOP</string>
    <string name="app_new">NEW</string>
    <string name="game_categories">CATEGORIES</string>
    <string name="game_hot">HOT</string>
    <string name="game_top">TOP</string>
    <string name="game_popular">POPULAR</string>
    <string name="game_new">NEW</string>
    <string name="ringtone_categories">CATEGORIES</string>
    <string name="ringtone_hot">HOT</string>
    <string name="ringtone_top">TOP</string>
    <string name="ringtone_new">NEW</string>
    <string name="wallpaper_categories">CATEGORIES</string>
    <string name="wallpaper_album">ALBUM</string>
    <string name="wallpaper_top">TOP</string>
    <string name="wallpaper_hot">HOT</string>
    <string name="wallpaper_live">LIVE WALLPAPER</string>
    <string name="resource_app">APPS&amp;GAMES</string>
    <string name="resource_pic">PICTURES</string>
    <string name="resource_music">MUSIC</string>
    <string name="resource_video">VIDEOS</string>
    <string name="resource_document">DOCUMENTS</string>
    <string name="my_apps_new">NEW</string>
    <string name="my_apps_all">ALL</string>
    <string name="downloading">DOWNLOADING(<xliff:g id="num">%1$s</xliff:g>)</string>
    <string name="download_history">DOWNLOAD HISTORY(<xliff:g id="num">%1$s</xliff:g>)</string>
    <string name="update">UPDATE(<xliff:g id="num">%1$s</xliff:g>)</string>
    <string name="installed">INSTALLED(<xliff:g id="num">%1$s</xliff:g>)</string>
    <string name="apk_uninstalled">NOT INSTALLED(<xliff:g id="num">%1$s</xliff:g>)</string>
    <string name="apk_installed">INSTALLED(<xliff:g id="num">%1$s</xliff:g>)</string>
    <string name="apk_scanning">Scanning:<xliff:g id="path">%1$s</xliff:g></string>
    <string name="apk_scan_tips">Amount of Apk:<xliff:g id="num">%1$s</xliff:g>&#160;&#160;&#160;&#160;Apk Space:<xliff:g id="size">%2$s</xliff:g></string>
    <string name="account">Account</string>
    <string name="new_tips">new</string>
    <string name="login_tips">login&#8230;</string>
    <string name="code_scan">QR Code Scanner</string>
    <string name="share_free">Wi-Fi Share</string>
    <string name="settings">Settings</string>
    <string name="favorite_app">Favorite Apps</string>
    <string name="feed_back">FAQs</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="my_apps">My Apps</string>
    <string name="my_contents">My Contents</string>
    <string name="tools">Tools</string>
    <string name="applocker">App Lock</string>
    <string name="menu_search">Search</string>
    <string name="menu_download">Download Manager</string>
    <string name="menu_scan">Receive Scan</string>
    <string name="app_status_normal">Download</string>
    <string name="app_status_waiting">Waiting</string>
    <string name="app_status_connecting">Connecting</string>
    <string name="app_status_continue">Continue</string>
    <string name="app_status_launch">Launch</string>
    <string name="app_status_open">Open</string>
    <string name="app_status_update">Update</string>
    <string name="app_status_install">Install</string>
    <string name="app_status_installing">Installing</string>
    <string name="app_status_pause">Pause</string>
    <string name="toast_silent_install_failed">Failed to launch Silent Install.</string>
    <string name="sdcard_no_memory">SD Card runs out of memory.</string>
    <string name="sdcard_not_found">SD card is not found.</string>
    <string name="sdcard_cannot_use">SD card canot be used.</string>
    <string name="download_queue_is_full">Download queue is full.</string>
    <string name="network_canot_work">Network unavailable.  Please try again later.</string>
    <string name="download_status_waiting">Waiting</string>
    <string name="download_status_paused">Paused</string>
    <string name="download_status_connecting">Connecting</string>
    <string name="download_status_finished">Finished</string>
    <string name="download_status_network_error">Netwrok error</string>
    <string name="download_status_memory_error">Storage space is running out.</string>
    <string name="download_status_io_error">IO error</string>
    <string name="download_status_server_error">Resource unfound</string>
    <string name="download_status_illega_error">Illegal download url</string>
    <string name="download_status_error">Something wrong happened</string>
    <string name="download_view_app_info">App info</string>
    <string name="download_cancle">Delete task</string>
    <string name="download_notification_title"><xliff:g id="num">%1$s</xliff:g> task(s) is currently downloading!</string>
    <string name="download_notification_sub_content">Click to check the download list.</string>
    <string name="install_notification_title"><xliff:g id="num">%1$s</xliff:g> task(s) download completed.</string>
    <string name="install_notification_sub_content">Download completed. Click for more information.</string>
    <string name="download_failed_tips"><xliff:g id="reason">%1$s</xliff:g>,download <xliff:g id="appName">%2$s</xliff:g> failed.</string>
    <string name="download_too_many_downloads">Too many downloads, please try again later.</string>
    <string name="manager_uninstall">Uninstall</string>
    <string name="manager_delete">Delete </string>
    <string name="manager_manager">Manager</string>
    <string name="manager_open">Launch</string>
    <string name="manager_detail">Details</string>
    <string name="manager_install">Install</string>
    <string name="app_pause">Pause</string>
    <string name="app_install">Install</string>
    <string name="app_installing">Installing</string>
    <string name="app_ratings">Ratings</string>
    <string name="app_download">Download</string>
    <string name="app_upgrade">Update</string>
    <string name="app_launch">Launch</string>
    <string name="app_continue">Continue</string>
    <string name="app_connecting">Connecting</string>
    <string name="app_waiting">Waiting</string>
    <string name="app_average">Average</string>
    <string name="rate_app">Rate this app:</string>
    <string name="rate_content">Write a comment</string>
    <string name="app_recommend">Related</string>
    <string name="app_refresh">Refresh</string>
    <string name="sharing_next">Next</string>
    <string name="sharing_how_to_accpect">Steps for your friends to receive files:</string>
    <string name="sharing_prompt1">Make sure both of you have launched zApp.</string>
    <string name="sharing_prompt1_of_link"><u>No zApp? Install now!</u></string>
    <string name="sharing_prompt2">Click \"Receive\" inside Wi-Fi Share.</string>
    <string name="ok">OK</string>
    <string name="tools_uninstall">UNINSTALL</string>
    <string name="tools_qrcode_scanner">QR CODE SCANNER</string>
    <string name="tools_wifi_share">WI-FI SHARE</string>
    <string name="tools_apk_manage">APK MANAGEMENT</string>
    <string name="tools_app_lock">APP LOCK</string>
    <string name="tools_skin">SKIN</string>
    <string name="tools_uninstall_desc">Here you can unistall apps freely!</string>
    <string name="tools_qrcode_scanner_desc">Scan whatever you want to know it better!</string>
    <string name="tools_wifi_share_desc">Share any files with friends without $ and data!</string>
    <string name="tools_apk_manage_desc">All your APKs are here. Sort them out!</string>
    <string name="tools_app_lock_desc">A reliable &amp; strong SECURITY guard for all your apps!</string>
    <string name="tools_skin_desc">Change distinctive skin, freshen your vision!</string>
    <string name="security_question">Security Questions</string>
    <string name="security_answer">Answer</string>
</resources>