<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dip" >

    <RadioGroup
        android:id="@+id/mf_tab_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bottom"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/mf_home_tab_rb"
            style="@style/main_footbar_radio"
            android:drawableTop="@drawable/selector_rb_home_bg"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/mf_apps_tab_rb"
            style="@style/main_footbar_radio"
            android:drawableTop="@drawable/selector_rb_apps_bg"
            android:text="@string/apps" />

        <RadioButton
            android:id="@+id/mf_games_tab_rb"
            style="@style/main_footbar_radio"
            android:drawableTop="@drawable/selector_rb_games_bg"
            android:text="@string/games" />

        <RadioButton
            android:id="@+id/mf_ringtones_tab_rb"
            style="@style/main_footbar_radio"
            android:drawableTop="@drawable/selector_rb_ringtones_bg"
            android:text="@string/ringtone" />

        <RadioButton
            android:id="@+id/mf_wallpaper_tab_rb"
            style="@style/main_footbar_radio"
            android:drawableTop="@drawable/selector_rb_wallpaper_bg"
            android:text="@string/wallpaper" />
    </RadioGroup>

</FrameLayout>