<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_drawable"
    android:orientation="vertical" >

    <include
        android:id="@+id/rl_title_bar"
        layout="@layout/main_header" />

    <!-- Uninstall -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/btn_uninstall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_tools_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingTop="12dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_tools_uninstall"
                    android:contentDescription="@null" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tools_uninstall"
                        android:textColor="#66ac21"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tools_uninstall_desc"
                        android:textColor="#aaaaaa"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- OR CODE SCANNER -->

            <LinearLayout
                android:id="@+id/btn_qrcode_scanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/selector_tools_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingTop="12dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_tools_qrcode"
                    android:contentDescription="@null" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tools_qrcode_scanner"
                        android:textColor="#00beb4"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tools_qrcode_scanner_desc"
                        android:textColor="#aaaaaa"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- WIFI SHARE -->

            <LinearLayout
                android:id="@+id/btn_wifi_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/selector_tools_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingTop="12dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_tools_wifishare"
                    android:contentDescription="@null" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tools_wifi_share"
                        android:textColor="#009abf"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tools_wifi_share_desc"
                        android:textColor="#aaaaaa"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- APK MAMAGE -->

            <LinearLayout
                android:id="@+id/btn_apk_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/selector_tools_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingTop="12dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_tools_apkmanage"
                    android:contentDescription="@null" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tools_apk_manage"
                        android:textColor="#ff9600"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tools_apk_manage_desc"
                        android:textColor="#aaaaaa"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- APP LOCK -->

            <LinearLayout
                android:id="@+id/btn_app_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/selector_tools_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingTop="12dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_tools_app_lock"
                    android:contentDescription="@null" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tools_app_lock"
                        android:textColor="#1ab25b"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tools_app_lock_desc"
                        android:textColor="#aaaaaa"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- Skin -->

            <LinearLayout
                android:id="@+id/btn_skin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/selector_tools_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingTop="12dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_tools_skin"
                    android:contentDescription="@null" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tools_skin"
                            android:textColor="#A8B5D7"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/ac_tools_tips"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="4dp"
                            android:background="@drawable/new_tip"
                            android:contentDescription="@null"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tools_skin_desc"
                        android:textColor="#aaaaaa"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>