<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/applocker_srcub_backgroud"
    android:orientation="vertical" >

    <include
        android:id="@+id/rl_title_bar"
        layout="@layout/main_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/applocker_background_light"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_question" />

        <TextView
            android:id="@+id/applocker_find_pwd_question_tv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/text_margin_size"
            android:background="@drawable/ic_editor_box"
            android:ems="10"
            android:gravity="center_vertical"
            android:padding="@dimen/text_margin_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/security_answer" />

        <com.x.ui.view.editview.ClearEditText
            android:id="@+id/applocker_find_pwd_answer_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/text_margin_size"
            android:background="@drawable/ic_editor_box"
            android:drawableRight="@drawable/account_delete_selector"
            android:ems="10"
            android:gravity="center_vertical"
            android:padding="@dimen/text_margin_size"
            android:singleLine="true" >

            <requestFocus android:focusableInTouchMode="true" />
        </com.x.ui.view.editview.ClearEditText>

        <Button
            android:id="@+id/applocker_find_pwd_confirm_btn"
            android:layout_width="@dimen/security_ok_btn_wight"
            android:layout_height="@dimen/account_btn_layout_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_btn_and_progress_theme"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>