<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_drawable"
    android:orientation="vertical" >

    <include
        android:id="@+id/rl_title_bar"
        layout="@layout/main_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/shareway_llHeight"
        android:layout_marginLeft="@dimen/qr_code_scanner_margin"
        android:layout_marginRight="@dimen/qr_code_scanner_margin"
        android:layout_marginTop="@dimen/qr_code_scanner_margin"
        android:background="@drawable/share_way_above_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/package_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/apps_package"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/sw_packageFile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="7 files(20M) have already been packed"
            android:textColor="@color/selector_theme_text_link"
            android:textSize="@dimen/text_big_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qr_code_scanner_margin"
        android:layout_marginRight="@dimen/qr_code_scanner_margin"
        android:background="@drawable/share_way_bottom_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/shareway_TvmarginTop"
            android:text="@string/sharing_how_to_accpect"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shareway_llmarginTop"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/step_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_size"
                android:background="@drawable/pic_one"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/sw_prompt_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sharing_prompt1"
                android:textSize="@dimen/text_big_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/sw_prompt_of_link_Tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/sharing_prompt1_of_link"
            android:textColor="@color/selector_theme_text_link"
            android:textSize="@dimen/text_big_size" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shareway_llMarginBottom"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/step_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_size"
                android:background="@drawable/pic_two"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sharing_prompt2"
                android:textSize="@dimen/text_big_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qr_code_scanner_margin"
        android:layout_marginRight="@dimen/qr_code_scanner_margin"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_btn_and_progress_theme" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/sharing_next"
            android:textColor="@color/white"
            android:textSize="@dimen/left_drawer_big_text_size" />
    </LinearLayout>

</LinearLayout>
